# ColorFloorplan

./: .gitignore  gunicorn_config.py  pyproject.toml  start.sh
src/: MeshBuilder.py  ai.py  config.py  convert_to_gltf.py  convert_to_svg.py  main.py  pipeline.py  room_labels.py  wall_segmentation.py
